# firstMarchingCubesAttempt

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj6.cxx  proj6.cxx~  proj6B  test
.svn/: wc.db
